deployment/ingress/ingress-fission.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fission
spec:
  ingressClassName: nginx
  rules:
    - host: "fission"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: router
              port: 
                number: 80
