deployment/ingress/ingress-kibana.yaml
# Team 69
# Dillon Blake 1524907
# Andrea Delahaye 1424289
# Yue Peng 958289
# Jeff Phan 1577799
# Alistair Wilcox 212544

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kibana
spec:
  ingressClassName: nginx
  rules:
  - host: "kibana"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: elasticsearch-kibana
            port: 
              number: 5601
